# chef-beta

./: .gitignore  README.md  docker-compose.yaml  openapi.yaml
api/: .env  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/app/: Dockerfile  main.py  models.py  schemas.py
api/db/: alembic.ini
api/db/development/versions/: c89436705d81_add_projects.py
api/db/init/: 001_create_test_database.sql
backend/: .env  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/app/: Dockerfile  dependencies.py  main.py  models.py  schemas.py
backend/app/members/: router.py
backend/app/projects/: router.py
backend/db/: seeds.sql
backend/db/development/: env.py
backend/db/development/versions/: 809f02a0afef_add_users_project_types_projects_.py  dbda7bdd5dc5_add_projects.py
backend/db/init/: 001_create_test_database.sql
backend/tests/: conftest.py  factories.py  test_main.py
backend/tests/members/: test_router.py
backend/tests/projects/: test_router.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.cjs
frontend/src/lib/components/: PageTop.svelte
frontend/src/lib/components/annotations/: Annotation.svelte  LabelSelectMenu.svelte
frontend/src/lib/components/common/: Pagination.svelte
frontend/src/lib/components/datasets/: DatasetTable.svelte
frontend/src/lib/components/members/: MemberTable.svelte
frontend/src/lib/components/projects/: ProjectDetailTable.svelte  ProjectTable.svelte  ProjectTablePagination.svelte
frontend/src/lib/models/: annotation.ts  label.ts
frontend/src/lib/types/: annotation-types.ts  dataset-types.ts  member-types.ts  project-types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/members/: +page.svelte
frontend/src/routes/projects/: +page.svelte  +page.ts
frontend/src/routes/projects/[id=integer]/: +page.svelte  +page.ts
view/: Makefile  README.md  package-lock.json  package.json  tailwind.config.cjs
view/mocks/: resources.json
view/src/lib/: types.ts
view/src/lib/components/: Annotation copy.svelte  Annotation.svelte  CategorySelectMenu.svelte  LabelSelectMenu.svelte  PageTop.svelte  Pagination.svelte  Table.svelte
view/src/lib/components/annotations/: Annotation.svelte
view/src/lib/models/: annotation.ts  label.ts
view/src/routes/: +layout.svelte  +page.svelte
view/src/routes/example/: +page.svelte
view/src/routes/examples/: +page.svelte  +page.ts
view/src/routes/projects/: +page.js  +page.svelte
view/src/routes/projects/api/: +server.ts
view/src/routes/tasks/: +page.svelte
view/src/routes/tasks/[taskId]/: +layout.js  +layout.svelte  +page.js  +page.svelte
view/src/routes/tasks/[taskId]/api/: +server.ts
