[tool.poetry]
name = "chef-api"
version = "0.1.0"
description = ""
authors = ["youichiro <cinnamon416@gmail.com>"]
readme = "README.md"


[tool.flake8]
max-line-length = 140
max-complexity = 10
extend-ignore = ["E203"]
exclude = "db/,.venv/"


[tool.black]
target-version = ['py310']
line-length = 140
exclude = '''
(
    db
    | .mypy_cache
    | .pytest_cache
    | .venv
)
'''


[tool.isort]
profile = "black"
line_length = 140
skip = ["db", ".venv"]


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
exclude = "db/*"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
sqlalchemy = "^2.0.5.post1"
mysqlclient = "^2.1.1"
alembic = "^1.10.2"
fastapi-pagination = "^0.11.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
pytest-randomly = "^3.12.0"
pytest-clarity = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
